# Matrix

./: CMakeLists.txt  README.md
headers/: Debug_printf.h  Matrix.hpp  Matrix_1d_array.hpp  Matrix_detail.hpp  Matrix_helpers.ipp  Matrix_inverse.ipp  Matrix_operators.ipp  Matrix_transpose.ipp  Timer.hpp
headers/Matrix/: Matrix.hpp  Matrix_1d_array.hpp  Matrix_constructors.ipp  Matrix_detail.hpp  Matrix_determinant.ipp  Matrix_eigen.ipp  Matrix_full.hpp  Matrix_generators.ipp  Matrix_helpers.ipp  Matrix_inverse.ipp  Matrix_operators.ipp  Matrix_properties.ipp  Matrix_sqrt.ipp  Matrix_transpose.ipp
headers/Vector/: Vector.hpp  Vector_constructors.ipp  Vector_geometry.ipp  Vector_helpers.ipp  Vector_operators.ipp
src/: Vector_test.cpp  main.cpp  main_benchmark.cpp  main_complex.cpp  main_determinant.cpp  main_double.cpp  main_int.cpp  main_inverse_comparison.cpp  main_test_multiplication.cpp  main_transpose_timing.cpp  main_universal_det.cpp  test_eigen.cpp  test_sqrt.cpp
src/tests/: main.cpp  main_complex.cpp  main_double.cpp  main_int.cpp  main_inverse_comparison.cpp  main_test_multiplication.cpp  main_universal_det.cpp  test_eigen.cpp
